Home page start

--- a/views/pages/user_management.ejs
+++ b/views/pages/user_management.ejs
@@ -16,7 +16,7 @@
 
 </head>
 
-<body style="">
+<body>
   <section>
     <div id="container_demo">
       <a class="hiddenanchor" id="toregister"></a>
