--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -39,7 +39,7 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom">
-        <button style="width: 32px; height: 32px; background-image: url(static/navbar/navbar-32.png);" id="menu-toggle"></button>
+        <button style="width: 32px; height: 32px; background-image: url(static/navbar/nav-32.png);" id="menu-toggle"></button>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
