--- a/views/pages/admin_login.ejs
+++ b/views/pages/admin_login.ejs
@@ -21,15 +21,15 @@
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Admin</h1>
                                         </div>
-                                        <form class="user" action="/admin" method="POST">
+                                        <form class="user" action="/admin/login" method="POST">
                                             <div class="form-group">
                                                 <input type="email" class="form-control form-control-user"
-                                                    id="exampleInputEmail" aria-describedby="emailHelp"
+                                                    id="exampleInputEmail" name="username" aria-describedby="emailHelp"
                                                     placeholder="Enter Email Address...">
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" class="form-control form-control-user"
-                                                    id="exampleInputPassword" placeholder="Password">
+                                                    id="exampleInputPassword" name="password" placeholder="Password">
                                             </div>
                                             <input type="submit" class="btn btn-primary btn-user btn-block" value="Login">
                                         </form>
