--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,7 @@
 <meta name="description" content="Read some amazing articles." />
 <meta name="author" content="co-authored by Mohit Marfatia, Meet Shah, Omkar Parab" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="icon" type="image/x-icon" href="static/logo/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="/static/logo/favicon.ico" />
 <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-<link rel="stylesheet" href="/static/css/clearfix.css">
