--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10169,6 +10169,7 @@ body {
   }
   #mainNav.navbar-shrink {
     background-color: #fff;
+    border-bottom: 1px solid #cccccc;
   }
   #mainNav.navbar-shrink .navbar-brand {
     color: #000000;
@@ -10253,7 +10254,17 @@ body {
   padding-top: 10rem;
   background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
 }
+
+.about-section-1 {
+  padding-top: 10rem;
+  background: #000;
+}
+
 .about-section p {
+  margin-bottom: 5rem;
+}
+
+.about-section-1 p {
   margin-bottom: 5rem;
 }
 
