--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filter Gallery</title>
-	<!--bootstrap-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<!--font-->
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-	<!--fontawseom-->
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
-	<!-- Icons -->
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <!-- Navbar Start -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">IPGM</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Reported</a>
-				</li>
-        <li class="nav-item">
-					<a class="nav-link" href="#">Members</a>
-				</li>
-        <li class="nav-item">
-					<a class="nav-link" href="#">Users</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-	<!-- Navbar End -->
-  <div id="main">
-    <div class="card">
-  <h5 class="card-header">Featured</h5>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <button type="button" class="btn btn-outline-danger">Delete</button>
-    <a href="#" class="btn btn-outline-success">Keep</a>
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <button type="button" class="btn btn-outline-danger">Delete</button>
-    <a href="#" class="btn btn-outline-success">Keep</a>
-  </div>
-</div>
-  </div>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Admin | Articleium</title>
+        <link href="static/css/styles.css" rel="stylesheet" />
+        <%- include('../partials/head.ejs') %>
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="/">Articleium</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/home">Home</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/dashboard">Dashboard</a></li>
+						<li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/manage">User Management</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/logout">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Main -->
+        <section class="about-section-1 text-center" id="public-articles">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 mx-auto">
+                        <h2 class="text-white mb-4">Reported Articles</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <% articles.forEach(element => { %>
+                      <div class="col-lg-4 col-md-6 col-sm-6 p-2">
+                          <div class="card">
+                              <div class="card-body">
+                                  <h5 class="card-title"><a href="#"><%= element.title %> </a></h5>
+                                  <p class="card-text"><%= element.desc %></p>
+                                  <% element.genres.forEach(genre => { %>
+                                  <a href="#"><%= genre %></a>
+                                  <% } ) %>
+                              </div>
+                          </div>
+                      </div>
+                    <% }) %>
+                </div>
+            </div>
+        </section>
+        <!-- Footer-->
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    </body>
 </html>
