--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -39,7 +39,7 @@
                       <div class="col-lg-4 col-md-6 col-sm-6 p-2">
                           <div class="card">
                               <div class="card-body">
-                                  <h5 class="card-title"><a href="#"><%= element.title %> </a></h5>
+                                  <h5 class="card-title"><a href="/article/5fb352bb0bc1456f40de07f4"><%= element.title %> </a></h5>
                                   <p class="card-text"><%= element.desc %></p>
                                   <% element.genres.forEach(genre => { %>
                                   <a href="#"><%= genre %></a>
