--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-  <title>Login</title>
+  <title>User</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/bootstrap-theme.css" rel="stylesheet">
@@ -19,7 +19,8 @@
       <a class="hiddenanchor" id="toregister"></a>
       <a class="hiddenanchor" id="tologin"></a>
       <div id="wrapper">
-        <div id="login" class="animate form">
+        <!-- <%- include ('../partials/messages.ejs') %> -->
+        <div id="login" class="animate form">        
           <form action="/users/login" autocomplete="on" method="post">
             <h1>Log in</h1>
             <p>
