--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -19,7 +19,7 @@
       <a class="hiddenanchor" id="toregister"></a>
       <a class="hiddenanchor" id="tologin"></a>
       <div id="wrapper">
-        <!-- <%- include ('../partials/messages.ejs') %> -->
+        <%- include ('../partials/messages.ejs') %>
         <div id="login" class="animate form">        
           <form action="/users/login" autocomplete="on" method="post">
             <h1>Log in</h1>
