--- a/views/pages/admin_login.ejs
+++ b/views/pages/admin_login.ejs
@@ -21,6 +21,7 @@
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Admin</h1>
                                         </div>
+                                        <%- include ('../partials/messages.ejs') %> 
                                         <form class="user" action="/admin/login" method="POST">
                                             <div class="form-group">
                                                 <input type="email" class="form-control form-control-user"
