--- a/views/pages/article_view.ejs
+++ b/views/pages/article_view.ejs
@@ -34,7 +34,7 @@
   <div class="author-info" data-article_id=<%= article_id %>>
     <h4 style="padding : 10px;color: white;"><strong><%= firstName %> <%= lastName %></strong></h4>
     <hr style="width: 100px;margin-top: 0px;margin-bottom: 5px;background-image: linear-gradient(to right, #52057b, #ea2c62); height:1px;">
-    <button id="follow">Follow</button>
+    <button id="follow" onClick="follow();">Follow</button>
   </div>
 
   <div id="like-comment">
@@ -67,7 +67,7 @@
         <hr id="comment-rule">
         <% } ) %>
       </div>
-    </div>
+    </div></div>
     <div id="comment-form">
       <!-- Comment -->
       <div class="form-group">
@@ -104,6 +104,14 @@
 
     function flag() {
       $.post("/article/flag", {
+        article_id: document.querySelector('.author-info').dataset.article_id
+      }, function(res) {
+        alert(res);
+      });
+    }
+
+    function follow() {
+      $.post("/article/follow", {
         article_id: document.querySelector('.author-info').dataset.article_id
       }, function(res) {
         alert(res);
