--- a/views/pages/editArticles.ejs
+++ b/views/pages/editArticles.ejs
@@ -40,6 +40,14 @@
                         <div class="form-group col-md-12">
                             <textarea id="editor" name="editor"><%- data %></textarea>
                         </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputState">Status</label>
+                            <select class="form-control" name="status" required>
+                                <option selected="">Choose...</option>
+                                <option value="public">Public</option>
+                                <option value="private">Private</option>
+                            </select>
+                        </div>
                         <div class="form-group col-md-12">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
