--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -32,7 +32,7 @@
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">articleium</h1>
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">Articles for the people by the people.</h2>
-                    <a class="btn btn-primary js-scroll-trigger" href="/users">Get Started</a>
+                    <a class="btn btn-primary js-scroll-trigger" href="/users/login">Get Started</a>
                 </div>
             </div>
         </header>
